@startuml
note "Tous les attributs sont NOT NULL par défaut.\n Un candidat ne peut pas candidater deux fois \n à la même offre et il y aura une vérification" as note


class Utilisateur{
  <primary> id : int
  email : str UNIQUE
  password : str (hash)
  nom : str
  prenom : str
  tel : str
  creation_date : datetime
  is_active : bool
}
note right
  constraint 0<=is_active<=1
end note

class Administrateur{
  etat : str
}

class Candidat{
    etat : str
}

class Recruteur{
    etat : str
}



class Type_Organisation{
  <primary> name : str
}

class Organisation{
  <primary> siret : int
  name : str
  adresse : str
  etat: str
}

class Etat_Offre{
  <primary> etat : text
}

class Offre{
  <primary> id : int
  expiration : datetime
  indications : text
}

class Fiche_de_poste{
  <primary> id : int
  intitule : str
  rythme_travail : float
  salaire_min : float
  salaire_max : float
  description : str
  responsable_hierarchique : str
  is_active : bool
}

class Status_de_poste{
  <primary> status : str
}
class Type_metier{
  <primary> type : str
}

class Lieu{
  <primary> id : int
  numero_rue : int
  rue : str
  ville : str
  postcode : str 
}

class Candidature{
  <primary> id : int
  date_candidature : datetime
  last_modified : datetime
}

class Etat_Candidature{
  <primary> etat : str
}

class Pieces_dossier{
  <primary> id : int
}

class Type_Piece_dossier{
  <primary> type : str
}

Pieces_dossier "*" -- "1" Type_Piece_dossier : "est typé"

Fiche_de_poste "*" -- "1" Type_metier : "se catégorise comme"
Candidature "*" -- "1" Etat_Candidature : "est dans l'état:"
Candidature "*" -- "1" Candidat : "Modifier la candidature"
Candidature "*" -- "1" Offre : "candidate"
Candidature "1" -- "*" Pieces_dossier : "attachés"
Offre "1" -- "1" Etat_Offre : "est" 
Administrateur -|> Utilisateur
Recruteur -|> Utilisateur
Candidat -|> Utilisateur
Organisation "1" -- "1" Type_Organisation : "est"
Organisation "1" -- "1" Fiche_de_poste : "poste"
Fiche_de_poste "1" -- "*" Offre : "est liée à"
Fiche_de_poste "1" -- "1" Status_de_poste : "est"
Fiche_de_poste "1" -- "1" Lieu : "réside"
Fiche_de_poste "*" -- "1 *" Recruteur : "Créer, modifier ou alonger la date de validité"
Recruteur "1 *" -- "1" Organisation : "Fait parti de"


@enduml
